--- a/web/themes/hsk_zymphonies/sass/includes/_variables.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_variables.sass
@@ -1,4 +1,5 @@
 // Breakpoints
+$breakpoint-smartphone: 340px
 $breakpoint-tablet-portrait: 480px
 $breakpoint-tablet: 768px
 $breakpoint-desktop-narrow: 991px
