--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -4,38 +4,33 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 
-#toolbar-item-administration-tray
-  font-weight: normal
-
 header
   &.main-header
     z-index: 1
   padding-top: 20px
   +legacy-pie-clearfix
+  #block-hsk-zymphonies-branding
+    display: flex
+    align-items: center
   .brand
     &.logo
-      width: 40%
-      margin: auto
+      width: 70px
+      margin-right: 10px
+
     &.site-name
-      text-align: center
+      text-align: left
     .site-branding__name, .site-branding__name a
       line-height: 1.2
       font-family: $roboto-slab
       color: #888
-      +x-rem(font-size, 1.5)
+      +x-rem(font-size, 1.2)
     .site-branding__slogan
-      color: #555
+      color: #757575
       font-family: $roboto-slab
       +x-rem(font-size, 0.8)
 
-  .region-primary-menu
-    display: none
-
-#block-hsk-branding
-  width: 55%
-  float: left
-
-
+#toolbar-item-administration-tray
+  font-weight: normal
 
 nav#block-hsk-zymphonies-main-menu
   @include legacy-pie-clearfix
@@ -163,7 +158,7 @@ nav#block-hsk-zymphonies-main-menu
   float: right
   padding: 9px 10px
   margin-top: 4px
-  margin-right: 15px
+  margin-right: 7px
   margin-bottom: 8px
   background-color: transparent
   background-image: none
@@ -179,7 +174,7 @@ nav#block-hsk-zymphonies-main-menu
 #block-mobilemenubutton
   width: 29px
   height: 29px
-  background: url(../images/menu-icon.png) no-repeat center center
+  background: url(../images/mobile-menu.svg) no-repeat center center
   float: right
   margin-left: 20px
   .field--name-body, a
@@ -214,6 +209,52 @@ nav#block-hsk-footer
 #block-views-block-header-slideshow-block-1
   clear: both
 
+/*------------------------------------------- */
+/*------------------------------------------- */
+/*------------- Smartphone (ab 340) ----------*/
+/*------------------------------------------- */
+/*------------------------------------------- */
+
++breakpoint($breakpoint-smartphone)
+
+
+
+  header
+    .brand
+      &.logo
+        width: 85px
+        max-width: 120px
+        margin-right: 10px
+
+      &.site-name
+        text-align: left
+        margin-bottom: 0.5em
+      .site-branding__name, .site-branding__name a
+        line-height: 1.2
+        font-family: $roboto-slab
+        color: #888
+        +x-rem(font-size, 1.3)
+      .site-branding__slogan
+        color: #757575
+        font-family: $roboto-slab
+        +x-rem(font-size, 0.8)
+        max-width: 45vw
+
+    .region-primary-menu
+      display: none
+
+  #block-hsk-branding
+    width: 55%
+    float: left
+
+  .navbar-toggle
+    margin-top: 20px
+    margin-right: 10px
+
+
+
+
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -225,8 +266,7 @@ nav#block-hsk-footer
     &.main-header
       .brand
         &.logo
-          width: 40%
-          max-width: 150px
+          width: 100px
         .site-branding__name, .site-branding__name a
           line-height: 1.2
           font-family: $roboto-slab
@@ -238,6 +278,10 @@ nav#block-hsk-footer
           +x-rem(font-size, 0.9)
       .navigation
         clear: both
+
+  .navbar-toggle
+    margin-top: 30px
+    margin-right: 15px
 
 
 
@@ -251,19 +295,18 @@ nav#block-hsk-footer
 +breakpoint($breakpoint-tablet)
   header
     padding-top: 30px
-    .navbar-toggle
-      display: block
-      position: relative
-      float: right
-      padding: 9px 10px
-      margin-top: 8px
-      margin-right: 15px
-      margin-bottom: 8px
-      //.icon-bar
-      //  display: block
-      //  width: 22px
-      //  height: 2px
-      //  border-radius: 1px
+  .navbar-toggle
+    display: block
+    position: relative
+    float: right
+    padding: 9px 10px
+    margin-right: 15px
+    margin-bottom: 8px
+    //.icon-bar
+    //  display: block
+    //  width: 22px
+    //  height: 2px
+    //  border-radius: 1px
 
   .search-block-form
     display: block
