--- a/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
+++ b/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
@@ -21,7 +21,13 @@
  */
 #}
 <div class="date">
-  {{ row._entity.fields.field_ev_date.date|date('d.m.Y', false, false) }}
+  <span class="weekday">
+    {{ row._entity.fields.field_ev_date.date|date('D', false, false) }}
+  </span>
+  <span class="date">
+    {{ row._entity.fields.field_ev_date.date|date('d.m.Y', false, false) }}
+  </span>
+
 </div>
 <div class="time">
   {{ row._entity.fields.field_uhrzeit.from|date('H:i', false, false) }}
