--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -70,6 +70,7 @@
 
           .date
             background: #888
+            display: block
             color: white
             padding: 1px 6px
 
