--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -324,7 +324,7 @@
         +x-rem(font-size, 0.85)
         .date, .time
           display: inline
-        .date:after
+        .date.date:after
           content: "-"
           padding-left: 0.15em
 
