--- a/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
+++ b/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
@@ -22,10 +22,9 @@
 #}
 <div class="date">
   <span class="weekday">
-{{ huppa }}
-    {{ row._entity.fields.field_ev_date.date|date('D', de, de) }}
+    {{ date_weekday }}
   </span>
-  <span class="date">
+  <span class="date-inner">
     {{ row._entity.fields.field_ev_date.date|date('d.m.Y', false, false) }}
   </span>
 
