--- a/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--slideshow_image--slideshow.html.twig
+++ b/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--slideshow_image--slideshow.html.twig
@@ -4,11 +4,10 @@
   'paragraph--type--' ~ paragraph.bundle|clean_class,
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
   not paragraph.isPublished() ? 'paragraph--unpublished'
-
-  set link_node_id = content.field_sli_link_heading.0['#url'].routeParameters.node
 ]
-
-
+%}
+{%
+set node_id = content.field_sli_link_heading.0['#url'].routeParameters.node
 %}
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
@@ -17,8 +16,7 @@
       {% if slide_link %}
       <a href="{{ slide_link }}">Zum Node</a>
       {% endif %}
-      {{ path('entity.node.canonical', {'node': link_node_id }) }}
-      {{ dd(content.field_sli_link_heading.0['#url'].routeParameters.node) }}
+      {{ path('entity.node.canonical', content.field_sli_link_heading.0['#url'].routeParameters, {} ) }}
 
     {% endblock %}
   </div>
