--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -50,6 +50,38 @@
           img
             width: 100%
 
+  #block-headerslideshow
+    margin-bottom: 0
+    .slick-slider
+      margin-bottom: 0
+    .paragraph--type--slideshow-image
+      position: relative
+      .slide-image
+        width: 100%
+        display: block
+      .text-box
+        background: #959595
+        +x-rem(font-size, 0.95)
+        color: white
+        line-height: 1.35
+        .inner-container
+          padding: 0 15px 10px 30px
+          .text
+            a
+              color: white
+          p
+            margin: 0 0 5px
+            padding: 0
+          h3.slide-headline
+            color: white
+            +x-rem(font-size, 1.35)
+            margin-top: 0.4em
+            margin-bottom: 0.1em
+            font-family: $open-sans
+            a
+              color: white
+
+
 .sidebar
   .view-events-list
     .view-header
@@ -301,6 +333,37 @@
                 +x-rem(font-size, 1.3)
                 text-align: left
                 line-height: 1.35
+
+    #block-headerslideshow
+      width: 100%
+      overflow: hidden
+      .paragraph--type--slideshow-image
+        max-height: 400px
+        .slide-image
+          display: flex
+        .text-box
+          position: absolute
+          bottom: 20px
+          width: 100%
+          background: none
+          text-align: left
+          line-height: 1.5
+          .inner-container
+            +make-md-column(5)
+            padding: 7px 15px 10px
+            background: rgba(70,70,70,0.6)
+            color: white
+            h3.slide-headline
+              padding: 0
+              margin-bottom: 0.25em
+              margin-top: 0.2em
+              margin-bottom: 0em
+            a
+              color: white
+              +x-rem(font-size, 1.3)
+              text-align: left
+              line-height: 1.35
+
   .path-news
     .view-news
       .views-row
@@ -358,6 +421,11 @@
       max-width: 1600px
       margin: auto
 
+    #block-headerslideshow
+      max-height: 400px
+      max-width: 1600px
+      margin: auto
+
 
 /* End Media Query Desktop */
 
@@ -385,5 +453,16 @@
               h3.slide-headline
                 margin-top: 0.4em
                 margin-bottom: 0.1em
+
+    #block-headerslideshow
+      .paragraph--type--slideshow-image
+        .text-box
+          bottom: 30px
+          .inner-container
+            +make-md-column(5)
+            padding: 10px 20px 15px
+            h3.slide-headline
+              margin-top: 0.4em
+              margin-bottom: 0.1em
 
 /* End Media Query Tablet */
