--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -80,6 +80,8 @@
             font-family: $open-sans
             a
               color: white
+          .text
+            font-size: x-rem(font-size, 0.95)
 
 
 .sidebar
@@ -360,7 +362,6 @@
               margin-bottom: 0em
             a
               color: white
-              +x-rem(font-size, 1.3)
               text-align: left
               line-height: 1.35
 
