--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -160,6 +160,14 @@
       a
         +small-grey-links
 
+  .block-infoblock
+    clear: both
+    background: #eee
+    width: 100vw
+    +x-rem(padding-top, 5)
+    +x-rem(padding-bottom, 5)
+    margin-bottom: 0
+
   .bottom-widgets
     background: #eee
     padding-top: 40px
