--- a/web/themes/hsk_zymphonies/templates/page.html.twig
+++ b/web/themes/hsk_zymphonies/templates/page.html.twig
@@ -243,6 +243,11 @@
   </div>
 </div>
 <!-- End layout -->
+{% if page.content_full_width_bottom %}
+    <div class="full-with-bottom-inner">
+    {{ page.content_full_width_bottom }}
+    </div>
+{% endif %}
 
 
 
