--- a/web/themes/hsk_zymphonies/templates/block/block--bundle--page_section_paragraphs.html.twig
+++ b/web/themes/hsk_zymphonies/templates/block/block--bundle--page_section_paragraphs.html.twig
@@ -3,10 +3,12 @@
   'block',
   'block-' ~ configuration.provider|clean_class,
   'block-' ~ plugin_id|clean_class,
+  'block-infoblock',
 ]
 %}
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
+  <div class="block-content container">
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
   {% endif %}
@@ -14,4 +16,5 @@
   {% block content %}
     {{ content }}
   {% endblock %}
+  </div>
 </div>
