--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -280,6 +280,17 @@
             display: inline
             &:before
               content: "- "
+    .block-infoblock
+      .field--name-field-paragraphs
+        .field__item
+          .paragraph
+            display: flex
+            .image
+              width: 50%
+            .infobox
+              width: 50%
+              padding: 2em
+
 
 
 /* End Media Query Tablet */
