--- a/web/themes/hsk_zymphonies/templates/page.html.twig
+++ b/web/themes/hsk_zymphonies/templates/page.html.twig
@@ -244,7 +244,7 @@
 </div>
 <!-- End layout -->
 {% if page.content_full_width_bottom %}
-    <div class="full-with-bottom-inner">
+    <div class="full-with-bottom-inner row">
     {{ page.content_full_width_bottom }}
     </div>
 {% endif %}
