--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -942,7 +942,7 @@ body {
   font-weight: 400;
   /*- Desktop narrow -*/
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   body {
     font-size: 13.95px;
     font-size: 0.9rem;
@@ -997,7 +997,7 @@ p {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   h2 {
     font-size: 23.25px;
     font-size: 1.5rem;
@@ -1180,7 +1180,7 @@ input, button, select, textarea {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   table {
     font-size: 13.95px;
     font-size: 0.9rem;
@@ -1423,11 +1423,21 @@ input, button, select, textarea {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 @media (min-width: 768px) {
   .bottom-widgets .bottom-region {
     float: left;
-    width: 33.3333333333%;
+    width: 50%;
+  }
+}
+@media (min-width: 992px) {
+  .bottom-widgets .bottom-region {
+    float: left;
+    width: 25%;
   }
 }
 
@@ -1457,7 +1467,7 @@ input, button, select, textarea {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .content_layout .content-layout-inner {
     padding-left: 0;
   }
@@ -1810,7 +1820,7 @@ input, button, select, textarea {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-header-slideshow-block-1 {
     width: 100%;
     overflow: hidden;
@@ -1863,13 +1873,13 @@ input, button, select, textarea {
     color: white;
   }
 }
-@media only screen and (min-width: 991px) and (min-width: 992px) {
+@media only screen and (min-width: 992px) and (min-width: 992px) {
   .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container {
     float: left;
     width: 41.6666666667%;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container h3.slide-headline {
     padding: 0;
     margin-bottom: 0.25em;
@@ -1877,7 +1887,7 @@ input, button, select, textarea {
     margin-bottom: 0em;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-header-par-slideshow-block-1 .view-header-par-slideshow .views-row .views-field-field-sli-text .inner-container a {
     color: white;
     font-size: 20.15px;
@@ -1886,7 +1896,7 @@ input, button, select, textarea {
     line-height: 1.35;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-headerslideshow {
     width: 100%;
     overflow: hidden;
@@ -1915,13 +1925,13 @@ input, button, select, textarea {
     color: white;
   }
 }
-@media only screen and (min-width: 991px) and (min-width: 992px) {
+@media only screen and (min-width: 992px) and (min-width: 992px) {
   .path-frontpage #block-headerslideshow .paragraph--type--slideshow-image .text-box .inner-container {
     float: left;
     width: 41.6666666667%;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-headerslideshow .paragraph--type--slideshow-image .text-box .inner-container h3.slide-headline {
     padding: 0;
     margin-bottom: 0.25em;
@@ -1929,14 +1939,14 @@ input, button, select, textarea {
     margin-bottom: 0em;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-headerslideshow .paragraph--type--slideshow-image .text-box .inner-container a {
     color: white;
     text-align: left;
     line-height: 1.35;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-news .view-news .views-row {
     *zoom: 1;
   }
@@ -1953,7 +1963,7 @@ input, button, select, textarea {
     margin: 5px 15px 5px 0;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .sidebar .view-events-list .views-row {
     margin-bottom: 0.7em;
   }
@@ -3081,7 +3091,7 @@ figure figcaption {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .page-node-type-page .node-turniere .content-box {
     position: relative;
     min-height: 1px;
@@ -3090,13 +3100,13 @@ figure figcaption {
     min-height: 320px;
   }
 }
-@media only screen and (min-width: 991px) and (min-width: 992px) {
+@media only screen and (min-width: 992px) and (min-width: 992px) {
   .page-node-type-page .node-turniere .content-box {
     float: left;
     width: 33.3333333333%;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .page-node-type-turnier #info-tabs .field--name-field-standings table {
     width: 100%;
   }
@@ -3204,7 +3214,7 @@ nav#block-hsk-zymphonies-main-menu ul.menu li a {
   font-family: "Roboto Slab", serif;
   color: #333;
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   nav#block-hsk-zymphonies-main-menu ul.menu li a {
     font-size: 13.175px;
     font-size: 0.85rem;
@@ -3398,7 +3408,7 @@ nav#block-useraccountmenu ul li a {
   font-size: 0.9rem;
   color: #666;
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   nav#block-useraccountmenu ul li a {
     font-size: 13.95px;
     font-size: 0.9rem;
@@ -3426,7 +3436,7 @@ nav#block-hsk-footer ul li a {
   font-size: 0.9rem;
   color: #666;
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   nav#block-hsk-footer ul li a {
     font-size: 13.95px;
     font-size: 0.9rem;
@@ -3548,7 +3558,7 @@ nav#block-hsk-footer ul li a {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   header .navbar-toggle {
     display: none;
   }
@@ -3983,15 +3993,72 @@ nav#block-hsk-footer ul li a {
 .path-frontpage .block-infoblock {
   clear: both;
   background: #eee;
-  width: 100vw;
-  padding-top: 77.5px;
-  padding-top: 5rem;
-  padding-bottom: 77.5px;
-  padding-bottom: 5rem;
+  padding-top: 62px;
+  padding-top: 4rem;
+  padding-bottom: 46.5px;
+  padding-bottom: 3rem;
   margin-bottom: 0;
 }
+.path-frontpage .block-infoblock .field--name-body {
+  margin-bottom: 2.5em;
+}
+.path-frontpage .block-infoblock .field--name-body h2 {
+  font-size: 26.35px;
+  font-size: 1.7rem;
+}
+.path-frontpage .block-infoblock .field--name-body p {
+  font-size: 16.275px;
+  font-size: 1.05rem;
+  width: 75%;
+}
+.path-frontpage .block-infoblock .field--name-body {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-bottom: 2em;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs {
+  clear: both;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+@media (min-width: 992px) {
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item {
+    float: left;
+    width: 50%;
+  }
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item {
+  margin-bottom: 3em;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph {
+  background: white;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .image img {
+  display: block;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox {
+  padding: 1em;
+}
+.path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph h3.title {
+  font-size: 20.15px;
+  font-size: 1.3rem;
+}
 .path-frontpage .bottom-widgets {
-  background: #eee;
+  background: #ddd;
   padding-top: 40px;
 }
 .path-frontpage .bottom-widgets h3 {
@@ -4081,6 +4148,18 @@ nav#block-hsk-footer ul li a {
 /*----------- Tablet Portrait ----------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
+@media only screen and (min-width: 480px) {
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph {
+    display: flex;
+  }
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .image {
+    width: 50%;
+  }
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox {
+    width: 50%;
+    padding: 2em;
+  }
+}
 /* End Media Query Tablet Portrait */
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -4111,16 +4190,6 @@ nav#block-hsk-footer ul li a {
   .path-frontpage #block-views-block-news-block-1 .views-row h3.title span.date:before {
     content: "- ";
   }
-  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph {
-    display: flex;
-  }
-  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .image {
-    width: 50%;
-  }
-  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox {
-    width: 50%;
-    padding: 2em;
-  }
 }
 /* End Media Query Tablet */
 /*------------------------------------------- */
@@ -4128,7 +4197,7 @@ nav#block-hsk-footer ul li a {
 /*------------- Desktop narrow  --------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage .content_layout .region-content {
     margin-top: 30px;
     margin-right: -15px;
@@ -4151,13 +4220,13 @@ nav#block-hsk-footer ul li a {
     padding-right: 5em;
   }
 }
-@media only screen and (min-width: 991px) and (min-width: 992px) {
+@media only screen and (min-width: 992px) and (min-width: 992px) {
   .path-frontpage #block-views-block-news-block-1 {
     float: left;
     width: 58.3333333333%;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-news-block-1 .views-row {
     margin-bottom: 22px;
   }
@@ -4165,7 +4234,7 @@ nav#block-hsk-footer ul li a {
     margin-top: 3px;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-events-list-block-1 {
     position: relative;
     min-height: 1px;
@@ -4173,13 +4242,13 @@ nav#block-hsk-footer ul li a {
     padding-left: 15px;
   }
 }
-@media only screen and (min-width: 991px) and (min-width: 992px) {
+@media only screen and (min-width: 992px) and (min-width: 992px) {
   .path-frontpage #block-views-block-events-list-block-1 {
     float: left;
     width: 41.6666666667%;
   }
 }
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 992px) {
   .path-frontpage #block-views-block-events-list-block-1 .views-row {
     margin-bottom: 13px;
   }
@@ -4188,12 +4257,34 @@ nav#block-hsk-footer ul li a {
     font-size: 0.7rem;
   }
 }
+@media only screen and (min-width: 992px) {
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .image img {
+    margin: 0;
+  }
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox {
+    padding: 1.3em 1.2em 1.3em 0.9em;
+  }
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox h3.title {
+    font-size: 17.825px;
+    font-size: 1.15rem;
+    margin-bottom: 0.2em;
+  }
+}
 /* End Media Query Tablet */
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*---------------- Desktop  ------------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
+@media only screen and (min-width: 1200px) {
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox {
+    padding: 1.3em;
+  }
+  .path-frontpage .block-infoblock .field--name-field-paragraphs .field__item .paragraph .infobox h3.title {
+    font-size: 20.15px;
+    font-size: 1.3rem;
+  }
+}
 /* End Media Query Tablet */
 
 /*# sourceMappingURL=hsk-zymphonies-styles.css.map */
