--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -163,14 +163,39 @@
   .block-infoblock
     clear: both
     background: #eee
-    width: 100vw
-    +x-rem(padding-top, 5)
-    +x-rem(padding-bottom, 5)
+    +x-rem(padding-top, 4)
+    +x-rem(padding-bottom, 3)
+    .field--name-body
+      margin-bottom: 2.5em
+      h2
+        +x-rem(font-size, 1.7)
+      p
+        +x-rem(font-size, 1.05)
+        width: 75%
     margin-bottom: 0
+    .field--name-body
+      +make-xs-column(12)
+      margin-bottom: 2em
+    .field--name-field-paragraphs
+      clear: both
+      .field__item
+        +make-xs-column(12)
+        +make-md-column(6)
+      .field__item
+        margin-bottom: 3em
+        .paragraph
+          background: white
+          .image
+            img
+              display: block
+          .infobox
+            padding: 1em
+          h3.title
+            +x-rem(font-size, 1.3)
 
 
   .bottom-widgets
-    background: #eee
+    background: #ddd
     padding-top: 40px
 
     h3
@@ -252,6 +277,17 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet-portrait)
+  .path-frontpage
+    .block-infoblock
+      .field--name-field-paragraphs
+        .field__item
+          .paragraph
+            display: flex
+            .image
+              width: 50%
+            .infobox
+              width: 50%
+              padding: 2em
 
 
 /* End Media Query Tablet Portrait */
@@ -281,16 +317,7 @@
             display: inline
             &:before
               content: "- "
-    .block-infoblock
-      .field--name-field-paragraphs
-        .field__item
-          .paragraph
-            display: flex
-            .image
-              width: 50%
-            .infobox
-              width: 50%
-              padding: 2em
+
 
 
 
@@ -323,6 +350,19 @@
           .date
             +x-rem(font-size, 0.7)
 
+    .block-infoblock
+      .field--name-field-paragraphs
+        .field__item
+          .paragraph
+            .image
+              img
+                margin: 0
+            .infobox
+              padding: 1.3em 1.2em 1.3em 0.9em
+              h3.title
+                +x-rem(font-size, 1.15)
+                margin-bottom: 0.2em
+
 
 
 
@@ -334,6 +374,15 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop)
+  .path-frontpage
+    .block-infoblock
+      .field--name-field-paragraphs
+        .field__item
+          .paragraph
+            .infobox
+              padding: 1.3em
+              h3.title
+                +x-rem(font-size, 1.3)
 
 
 /* End Media Query Tablet */
