--- a/web/themes/hsk_zymphonies/sass/_layout.sass
+++ b/web/themes/hsk_zymphonies/sass/_layout.sass
@@ -24,7 +24,7 @@
 .content_layout
   +clearfix
   margin-top: 30px
-  .content-layout-inner
+  .content_layout
     +make-md-column(12)
   .region-content
     margin-bottom: 40px
