--- a/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -7,23 +7,20 @@
   font-family: 'Fontawesome'
   font-style: normal
   font-weight: 400
-  src: url("../fonts/fontawesome/webfonts/fa-solid-900.eot")
-  src: url("../fonts/fontawesome/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-solid-900.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-solid-900.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-solid-900.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-solid-900.svg#fontawesome") format("svg")
+  src: url("../fonts/fontawesome/webfonts/fa-solid-900.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-solid-900.ttf") format("truetype")
 
 @font-face
   font-family: 'Fontawesome-Regular'
   font-style: normal
   font-weight: 400
-  src: url("../fonts/fontawesome/webfonts/fa-regular-400.eot")
-  src: url("../fonts/fontawesome/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-regular-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-regular-400.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-regular-400.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-regular-400.svg#fontawesome") format("svg")
+  src: url("../fonts/fontawesome/webfonts/fa-regular-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-regular-400.ttf") format("truetype")
 
 
 @font-face
   font-family: 'Fontawesome-Brands'
   font-style: normal
   font-weight: normal
-  src: url("../fonts/fontawesome/webfonts/fa-brands-400.eot")
-  src: url("../fonts/fontawesome/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-brands-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-brands-400.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-brands-400.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-brands-400.svg#fontawesome") format("svg")
+  src: url("../fonts/fontawesome/webfonts/fa-brands-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-brands-400.ttf") format("truetype")
 
 
 
