--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -258,8 +258,29 @@
               left: -1.5em
               font-size: 1.5rem
         &.field--name-field-target-audience
+          > .field__label
+            &:before
+              font-family: Fontawesome
+              content: "\e533"
+              top: -0.2em
+              left: -1.7em
+              font-size: 1.5rem
         &.field--name-field-responsible-person
+          > .field__label
+            &:before
+              font-family: Fontawesome
+              content: "\e53d"
+              top: 0em
+              left: -1.7em
+              font-size: 1.6rem
         &.field--name-field-sli-text
+          > .field__label
+            &:before
+              font-family: Fontawesome-Regular
+              content: "\f0e0"
+              top: -0.2em
+              left: -1.5em
+              font-size: 1.5rem
     .field--name-field-sli-image
       img
         display: block
@@ -448,8 +469,17 @@ div#sliding-popup
               &:before
                 content: none
           &.field--name-field-target-audience
+            > .field__label
+              &:before
+                content: none
           &.field--name-field-responsible-person
+            > .field__label
+              &:before
+                content: none
           &.field--name-field-sli-text
+            > .field__label
+              &:before
+                content: none
       .field--name-field-sli-image
         width: 66.66%
 
