--- a/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--imageblock_small.html.twig
+++ b/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--imageblock_small.html.twig
@@ -4,8 +4,10 @@
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
   not paragraph.isPublished() ? 'paragraph--unpublished'
 ] %}
-
+{% if paragraph.field_node_link.target_id %}
 {% set entity_reference_link =  path('entity.node.canonical', {'node':  paragraph.field_node_link.target_id}) %}
+{% endif %}
+
 {% block paragraph %}
 
   <div{{ attributes.addClass(classes) }}>
